name:                haskell-binance
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Lucsanszky
maintainer:          dan.lucsanszky@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
extra-source-files:  ChangeLog.md
                     README.md
cabal-version:       >=1.10

library
  exposed-modules: Binance
                 , Binance.Api
                 , Binance.Prelude
                 , Binance.Type
  
  -- other-modules:       
  
  -- other-extensions:    

  build-depends:       aeson
                     , base >=4.9 && <4.10
                     , bytestring
                     , cryptonite
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , mtl
                     , network
                     , servant ==0.11
                     , servant-client ==0.11
                     , text
                     , websockets
                     , wuss

  hs-source-dirs:      src
  
  default-language:    Haskell2010

  default-extensions:  DataKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedLists
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TypeOperators
  
executable examples
  hs-source-dirs:      example

  main-is:             Example.hs

  build-depends:       base >=4.9 && <4.10
                     , bytestring
                     , haskell-binance
                     , http-client
                     , http-client-tls
                     , servant ==0.11
                     , servant-client ==0.11
                     , websockets
                     , wuss

  default-language:    Haskell2010

  default-extensions:  DataKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       NamedFieldPuns
                       NoImplicitPrelude
                       OverloadedLists
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       TypeOperators
